# HW-code

./: 1.py  case.csv  case1.csv  case1.txt  case2.csv  case2.txt  readme  stone_pair.hpp  stone_pair2.hpp  test.cpp  test2.cpp
100/AI面板识别/: AI面板识别.cpp
100/We Are A Team/: We Are A Team.cpp
100/乘坐保密电梯/: 乘坐保密电梯.py  乘坐保密电梯2.py
100/告警抑制/: test.py
100/响应报文时间/: 响应报文时间.py
100/增强的strstr/: 增强的strstr.cpp
100/处理器/: test.ipynb
100/快递业务站/: test.py
100/恢复数字序列/: 恢复数字序列.py
100/拔河比赛/: 拔河比赛.cpp
100/文件目录大小/: 文件目录大小.cpp
100/最小调整顺序次数、特异性双端队列/: test.ipynb  test.py
100/最长的指定瑕疵度的元音子串/: 最长的指定瑕疵度的元音子串-2.c  最长的指定瑕疵度的元音子串.c
100/检查是否存在满足条件的数字组合/: 检查是否存在满足条件的数字组合.py
100/用连续自然数之和来表达整数/: 用连续自然数之和来表达整数.cpp
100/矩阵稀疏扫描/: 矩阵稀疏扫描.c
100/符合要求的元组的个数/: 符合要求的元组的个数.py
100/跳房子1/: 跳房子1.py
200/melon的难题/: melon的难题.py  melon的难题2.py
200/二维伞的雨滴效应/: 二维伞的雨滴效应.cpp
200/代表团坐车/: 代表团坐车.cpp  代表团坐车.py
200/信道分配/: 信道分配.cpp
200/周末爬山/: attentionn.py  test2.py  周末爬山.py
200/在字符串中找出连续最长的数字串/: 在字符串中找出连续最长的数字串.py
200/字符串比较/: 2.py  字符串比较.py
200/战场索敌/: 战场索敌.cpp  战场索敌.py
200/找到比自己强的人数/: 找到比自己强的人数.py
200/找最小数/: 找最小数.py  找最小数2.py
200/报数游戏/: 报数游戏.py
200/排队游戏/: 排队游戏.cpp  排队游戏.py
200/数字游戏/: 数字游戏.py  数字游戏2.py
200/最佳植树距离/: 最佳植树距离.cpp  最佳植树距离.py
200/最小传输时延/: dijkstra.cpp  最小传输时延.cpp  最小传输时延.py  最小传输时延2.py  最小传输时延3.py
200/最小传输时延2/: 最小传输时延2.cpp
200/最长的完全交替连续方波信号/: 最长的完全交替连续方波信号.py
200/服务失效判断/: 服务失效判读.py
200/查字典/: 查字典.py
packet_question/: 01背包.py  分组背包.py  多重背包.py  完全背包.py
stone_pair/: CMakeLists.txt
stone_pair/include/: stone_pair.hpp
stone_pair/test/: test.cpp
(+28 files in other folders)
